chore(package-lock): 更新包名称和版本信息并添加esbuild多平台支持
- 将包名称由math-question-generator改为mathbud-frontend
- 将版本号更新为1.0.0-alpha
- 在package-lock.json中补充了依赖包resolved和integrity字段
- 增加了@esbuild针对多平台(cpu和os)的可选依赖包支持
- 更新了部分依赖包的版本和元数据
- 确保了node版本兼容性说明符合各平台要求

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0-alpha",
   "private": true,
   "description": "数字芽算（MathBud） - 智能数学题目生成器",
+  "author": "AstraSynergy",
   "scripts": {
     "build": "cd math-question-generator && npm run build",
     "android:prepare": "npm run build && npx cap add android",
@@ -56,6 +57,9 @@
         ]
       }
     ],
+    "electronDownload": {
+      "mirror": "https://npmmirror.com/mirrors/electron/"
+    },
     "win": {
       "target": [
         {
@@ -114,5 +118,8 @@
       ],
       "icon": "build/icon.png"
     }
+  },
+  "electronDownload": {
+    "mirror": "https://npmmirror.com/mirrors/electron/"
   }
 }
