feat: Add build and test scripts for MathBud application
- Updated package.json to include a new build command for Electron.
- Added AI configuration check script in Chinese to ensure proper setup.
- Created a comprehensive testing plan document in Chinese for verifying application functionality.
- Introduced final validation script to check core files and configurations.
- Added build and test script to automate the build process and check necessary files.
- Implemented a script to launch the built application and verify its functionalities.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "windows:prepare": "npm run build && electron-builder install-app-deps",
     "windows:build": "npm run build && electron-builder --win",
     "windows:build-msi": "npm run build && electron-builder --win msi",
-    "dist": "npm run build && electron-builder"
+    "dist": "npm run build && electron-builder",
+    "electron:build": "npm run build && electron-builder --win"
   },
   "main": "electron/main.js",
   "devDependencies": {
