--- a/config/app.yaml
+++ b/config/app.yaml
@@ -193,7 +193,7 @@ ai:
 # MCP服务器配置
 mcp_server:
   host: "localhost"
-  port: 8001
+  port: 8002
   cors_origins:
     - "http://localhost:3000"
     - "http://localhost:5173"
@@ -243,7 +243,7 @@ export:
     - id: "word"
       name_zh: "Word文档"
       name_en: "Word Document"
-      enabled: false
+      enabled: true
       extension: ".docx"
   
   # PDF配置
